# ARP_Turtlebot

./: .buildinfo  .gitignore  CMakeLists.txt  Makefile  README.md  cmd_vel.html  genindex.html  index.html  laser_data.html  name_convention  objects.inv  odom.html  odometry  search.html  searchindex.js  usage.html
.doctrees/: cmd_vel.doctree  environment.pickle  index.doctree  laser_data.doctree  odom.doctree  usage.doctree
.github/workflows/: documentation.yml
docs/: .buildinfo.bak  annotated_dup.js  class_client-members.html  class_client.html  class_client.js  classes.html  client_8cpp.html  client_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  genindex.html  index.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: bizstyle.js
docs/html/: annotated.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.js  dir_eca4379131abe55f66c454f8d4bf8fd2.html  dir_eca4379131abe55f66c454f8d4bf8fd2.js  doxygen_crawl.html  functions_func.html  navtreedata.js  navtreeindex0.js
docs/html/search/: searchdata.js
docs/search/: all_0.js  all_1.js  all_2.js  functions_0.js
docs/source/: cmd_vel.rst  conf.py  index.rst  laser_data.rst  odom.rst  usage.rst
html/: .buildinfo  cmd_vel.html  laser_data.html  objects.inv  search.html  usage.html
html/_sources/: cmd_vel.rst.txt  laser_data.rst.txt  usage.rst.txt
include/client/: client.h
include/laser_data/: laser_data.h
include/shared_memory/: shared_memory.h
script/: laserscan_mockup.py  laserscan_read.py  opencv_test.py  server.py  server_odom.py  server_recv.py  server_send.py
src/: CMakeLists.txt  TCP.cpp  TCP.h  client.cpp  cmd_vel.cpp  laser_data.cpp  laser_data_calc.cpp  main.cpp  odom.h  odometry.cpp  server.cpp
test/: CMakeLists.txt  read_shared_memory.py  server.py  test_client.cpp  test_cmd_vel.cpp  test_laser.cpp  test_odometry.cpp
